Bug fixes and better handling of clients disconnection, and web clients connection and message readout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(PPS_TB_RC)
 
-set(GCC_COMPILE_FLAGS "-Wall -fPIC -O2")
+set(GCC_COMPILE_FLAGS "-Wall -lusb -fPIC -O2")
 add_definitions(${GCC_COMPILE_FLAGS})
 
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cpp)
