Removed the FPGA readout part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,7 @@ add_executable(ppsRun main.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib
 add_executable(listener listener.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 add_executable(reader test/reader.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 
-#find_package(libusb-1.0 REQUIRED)
-#set(CMAKE_CXX_FLAGS "-lusb-1.0")
-set(CMAKE_CXX_FLAGS "-lusb-1.0 -lCAENVME -I$(TOP)/$(VMEd)/CAENVMELib -I$(TOP)/$(VMEd)/CAENVMETool -DLINUX")
+set(CMAKE_CXX_FLAGS "-lCAENVME -I$(TOP)/$(VMEd)/CAENVMELib -I$(TOP)/$(VMEd)/CAENVMETool -DLINUX")
 
-add_executable(ppsFetch2 fetch.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 add_executable(ppsFetch fetch_vme.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 
