Improvements in the file reader object; new TDCMeasurement object to cope with multi-words events

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,13 +15,16 @@ include_directories("${PROJECT_SOURCE_DIR}/external")
 
 add_executable(ppsRun main.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 add_executable(listener listener.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
-add_executable(reader test/reader.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
+
+add_library(reader_lib OBJECT ${PROJECT_SOURCE_DIR}/src/FileReader.cpp)
+add_executable(reader test/reader.cpp $<TARGET_OBJECTS:reader_lib>)
 
 # CAEN stuff
 add_library(caen SHARED IMPORTED)
 set_property(TARGET caen PROPERTY IMPORTED_LOCATION "${CAEN_LOCATION}/libCAENVME.so")
 set(CMAKE_CXX_FLAGS "-DLINUX")
-set(CMAKE_CXX_LINK_FLAGS "-lCAENVME -Wl")
+#set(CMAKE_CXX_LINK_FLAGS "-lCAENVME -Wl")
+set(CMAKE_CXX_LINK_FLAGS "-lCAENVME")
 
 add_executable(ppsFetch fetch_vme.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 target_link_libraries(ppsFetch caen)
