--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,11 @@ include_directories("${PROJECT_SOURCE_DIR}/external")
 add_executable(ppsRun main.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 add_executable(listener listener.cpp $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
 
-add_library(reader_lib OBJECT ${PROJECT_SOURCE_DIR}/src/FileReader.cpp)
-add_executable(reader test/reader.cpp $<TARGET_OBJECTS:reader_lib>)
+# File reader
+#add_library(reader_lib OBJECT ${PROJECT_SOURCE_DIR}/src/FileReader.cpp)
+#add_executable(reader test/reader.cpp $<TARGET_OBJECTS:reader_lib>)
+#set_property(TARGET reader PROPERTY EXCLUDE_FROM_ALL true)
+add_subdirectory(test)
 
 # CAEN stuff
 add_library(caen SHARED IMPORTED)
