Reorganized the fetcher code ; added the user FW version retrieval in V1495 board handler

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -17,8 +17,8 @@ endif()
 # File reader
 add_library(reader_lib OBJECT ${PROJECT_SOURCE_DIR}/src/FileReader.cpp)
   
-#add_executable(reader_oneedge ${PROJECT_SOURCE_DIR}/test/reader_oneedge.cpp $<TARGET_OBJECTS:reader_lib>)
-#set_property(TARGET reader_oneedge PROPERTY EXCLUDE_FROM_ALL true)
+add_executable(reader_oneedge ${PROJECT_SOURCE_DIR}/test/reader_oneedge.cpp $<TARGET_OBJECTS:reader_lib>)
+set_property(TARGET reader_oneedge PROPERTY EXCLUDE_FROM_ALL true)
 
 if (ROOT_FOUND)
 
