--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,6 +26,10 @@ if (ROOT_FOUND)
   target_link_libraries(reader ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
   set_property(TARGET reader PROPERTY EXCLUDE_FROM_ALL true)
 
+  add_executable(reader_channelid ${PROJECT_SOURCE_DIR}/test/reader_channelid.cpp $<TARGET_OBJECTS:reader_lib>)
+  target_link_libraries(reader_channelid ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
+  set_property(TARGET reader_channelid PROPERTY EXCLUDE_FROM_ALL true)
+
   #add_executable(reader_2boards ${PROJECT_SOURCE_DIR}/test/reader_2boards.cpp $<TARGET_OBJECTS:reader_lib>)
   #target_link_libraries(reader_2boards ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
   #set_property(TARGET reader_2boards PROPERTY EXCLUDE_FROM_ALL true)
