--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,26 +14,20 @@ if (ROOT_FOUND)
   add_definitions(${GCC_COMPILE_FLAGS})
 endif()
 
+function(ADD_TEST exec)
+  add_executable(${exec} ${PROJECT_SOURCE_DIR}/test/${exec}.cpp $<TARGET_OBJECTS:reader_lib>)
+  target_link_libraries(${exec} ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
+  set_property(TARGET ${exec} PROPERTY EXCLUDE_FROM_ALL true)
+endfunction()
+
 # File reader
 add_library(reader_lib OBJECT ${PROJECT_SOURCE_DIR}/src/FileReader.cpp)
   
 if (ROOT_FOUND)
-
-  add_executable(reader ${PROJECT_SOURCE_DIR}/test/reader.cpp $<TARGET_OBJECTS:reader_lib>)
-  target_link_libraries(reader ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
-  set_property(TARGET reader PROPERTY EXCLUDE_FROM_ALL true)
-
-  add_executable(reader_channelid ${PROJECT_SOURCE_DIR}/test/reader_channelid.cpp $<TARGET_OBJECTS:reader_lib>)
-  target_link_libraries(reader_channelid ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
-  set_property(TARGET reader_channelid PROPERTY EXCLUDE_FROM_ALL true)
-
-  add_executable(reader_oneedge ${PROJECT_SOURCE_DIR}/test/reader_oneedge.cpp $<TARGET_OBJECTS:reader_lib>)
-  target_link_libraries(reader_oneedge ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
-  set_property(TARGET reader_oneedge PROPERTY EXCLUDE_FROM_ALL true)
-
-  #add_executable(reader_2boards ${PROJECT_SOURCE_DIR}/test/reader_2boards.cpp $<TARGET_OBJECTS:reader_lib>)
-  #target_link_libraries(reader_2boards ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
-  #set_property(TARGET reader_2boards PROPERTY EXCLUDE_FROM_ALL true)
-
+  add_test(reader)
+  add_test(reader_channelid)
+  add_test(reader_oneedge)
+  add_test(errors)
+  #add_test(reader_2boards)
 endif()
 
