--- a/dqm/CMakeLists.txt
+++ b/dqm/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Tests needing a ROOT instance
+# DQM modules needing a ROOT instance
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} /usr/share/root/cmake)
 find_package(ROOT)
 
@@ -14,17 +14,13 @@ if (ROOT_FOUND)
   add_definitions(${GCC_COMPILE_FLAGS})
 endif()
 
-function(ADD_TEST exec)
-  add_executable(${exec} ${PROJECT_SOURCE_DIR}/test/${exec}.cpp $<TARGET_OBJECTS:reader_lib>)
+function(ADD_DQM exec)
+  add_executable(${exec} ${PROJECT_SOURCE_DIR}/dqm/${exec}.cpp $<TARGET_OBJECTS:reader_lib> $<TARGET_OBJECTS:src_lib> $<TARGET_OBJECTS:ws_lib>)
   target_link_libraries(${exec} ${ROOT_LIBRARIES} ${ROOT_COMPONENT_LIBRARIES})
-  set_property(TARGET ${exec} PROPERTY EXCLUDE_FROM_ALL true)
+  #set_property(TARGET ${exec} PROPERTY EXCLUDE_FROM_ALL true)
 endfunction()
 
 if (ROOT_FOUND)
-  add_test(reader)
-  add_test(reader_channelid)
-  add_test(reader_oneedge)
-  add_test(errors)
-  #add_test(reader_2boards)
+  add_dqm(gastof)
 endif()
 
