Finally fixed the bug on file changes rate ; New DQMonitor: DB vistars ; bug fixes...

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,6 @@ if (ROOT_FOUND)
   #add_test(reader_2boards)
 endif()
 
-add_test(db)
-set_property(TARGET db PROPERTY LINK_FLAGS "-lsqlite3")
+add_test(testdb)
+set_property(TARGET testdb PROPERTY LINK_FLAGS "-lsqlite3")
 
