--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,6 +23,7 @@ endfunction()
 if (ROOT_FOUND)
   add_test(reader)
   add_test(multireader)
+  add_test(write_tree)
   add_test(reader_raw)
   add_test(reader_channelid)
   add_test(reader_oneedge)
