Further improvements ; see code to have a proper commit message damn

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -28,6 +28,7 @@ if (ROOT_FOUND)
   add_test(reader_channelid)
   add_test(reader_oneedge)
   add_test(errors)
+  add_test(quartic_occupancy_vs_run)
   #add_test(reader_2boards)
 endif()
 
