Switched back from 1 ns=1000 ps to 1 ns=1024 ps (according to CAEN...) ; enhanced the HV interaction with end user's GUI ; minor fixes

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -29,6 +29,7 @@ if (ROOT_FOUND)
   add_test(reader_oneedge)
   add_test(errors)
   add_test(quartic_occupancy_vs_run)
+  add_test(gastof_occupancy_vs_run)
   #add_test(reader_2boards)
 endif()
 
